Small fix due to unreadable text in dark mode with white objects in background.

--- a/obsidian.css
+++ b/obsidian.css
@@ -153,7 +153,7 @@
 html,
 body,
 .app-container {
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(30px) contrast(100%);
   background: radial-gradient(
       ellipse at top,
       var(--background-light),
@@ -203,7 +203,7 @@ kbd.suggestion-hotkey {
 
 .modal-bg {
   background-color: #ffffff01;
-  backdrop-filter: blur(30px);
+  backdrop-filter: blur(25px) brightness(65%);
 }
 
 /* Make legible background for menus since we overrode the background */
